--- a/MijnErvaringen.html
+++ b/MijnErvaringen.html
@@ -83,40 +83,41 @@
 
 	  </nav> 												<!--- Navbar End    -->		   
 	  <main>
-		<div id="myDIV" style="display: none">
-			<div id="mydiv">
-				<div id="mydivheader">
-					<div class="cal-container">
-						<div class="cal-box">	
-							<form name="calculator">
-								<input id="display" type="text" name="display" placeholder="0" readonly>
-								<br>
-								<input class="button" type="button" value="7" onclick="calculator.display.value +='7'">
-								<input class="button" type="button" value="8" onclick="calculator.display.value +='8'">
-								<input class="button" type="button" value="9" onclick="calculator.display.value +='9'">
-								<input class="button mathbutton" type="button" value="+" onclick="calculator.display.value +='+'">
-								<br>
-								<input class="button" type="button" value="4" onclick="calculator.display.value +='4'">
-								<input class="button" type="button" value="5" onclick="calculator.display.value +='5'">
-								<input class="button" type="button" value="6" onclick="calculator.display.value +='6'">
-								<input class="button mathbutton" type="button" value="-" onclick="calculator.display.value +='-'">
-								<br>
-								<input class="button" type="button" value="1" onclick="calculator.display.value +='1'">
-								<input class="button" type="button" value="2" onclick="calculator.display.value +='2'">
-								<input class="button" type="button" value="3" onclick="calculator.display.value +='3'">
-								<input class="button mathbutton" type="button" value="x" onclick="calculator.display.value +='*'">
-								<br>
-								<input class="button clearButton" type="button" value="C"onclick="calculator.display.value =''">
-								<input class="button" type="button" value="0" onclick="calculator.display.value +='0'">
-								<input class="button mathbutton" type="button" value="=" onclick="calculator.display.value = eval(calculator.display.value)">
-								<input class="button mathbutton" type="button" value="/" onclick="calculator.display.value +='/'">
-								<br />
-							</form>
-						</div>
-					</div>
+<div id="toggle" style="display: none">
+	<div class="draggable"  >
+		<div class="draggableheader">
+			<div class="cal-container">
+				<div class="cal-box">	
+					<form name="calculator">
+						<input id="display" type="text" name="display" placeholder="0" readonly>
+					<br>
+						<input class="button" type="button" value="7" onclick="calculator.display.value +='7'">
+						<input class="button" type="button" value="8" onclick="calculator.display.value +='8'">
+						<input class="button" type="button" value="9" onclick="calculator.display.value +='9'">
+						<input class="button mathbutton" type="button" value="+" onclick="calculator.display.value +='+'">
+					<br>
+						<input class="button" type="button" value="4" onclick="calculator.display.value +='4'">
+						<input class="button" type="button" value="5" onclick="calculator.display.value +='5'">
+						<input class="button" type="button" value="6" onclick="calculator.display.value +='6'">
+						<input class="button mathbutton" type="button" value="-" onclick="calculator.display.value +='-'">
+					<br>
+						<input class="button" type="button" value="1" onclick="calculator.display.value +='1'">
+						<input class="button" type="button" value="2" onclick="calculator.display.value +='2'">
+						<input class="button" type="button" value="3" onclick="calculator.display.value +='3'">
+						<input class="button mathbutton" type="button" value="x" onclick="calculator.display.value +='*'">
+					<br>
+						<input class="button clearButton" type="button" value="C"onclick="calculator.display.value =''">
+						<input class="button" type="button" value="0" onclick="calculator.display.value +='0'">
+						<input class="button mathbutton" type="button" value="=" onclick="calculator.display.value = eval(calculator.display.value)">
+						<input class="button mathbutton" type="button" value="/" onclick="calculator.display.value +='/'">
+					<br>
+					</form>
 				</div>
 			</div>
 		</div>
+	</div>
+</div>
+		
 		
 		  <div class="expando js-expando">
 			<div class="expando__inner js-expando-inner">
@@ -294,9 +295,9 @@
 			<p class="copyright">Butter since 1998 ©</p>
 		 </footer> <!--footer end --------------->
 		</main>
-		<script src="js/jquery.min.js"></script>
-		<script src="js/owl.carousel.min.js"></script>
-		<script src="js/main.js"></script>		
+		<script src="./js/jquery.min.js"></script>
+		<script src="./js/owl.carousel.min.js"></script>
+		<script src="./js/main.js"></script>		
 <script src="js/expando.js"></script>
 <script src="js/dark.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
